--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ social_media:
   # unsplash: your_username
   # vk: your_username
   website: https://www.ebi.ac.uk/about/people/anton-petrov
+  orcid: 0000-0001-7279-2682
   # youtube: your_username
 
 topics:
